tests/fail_stable/missing_open_bracket.stderr
error: Unexpected standalone '}'. Literal '}' need to be escaped as '}}'.  At "asdf}" <--
 --> $DIR/missing_open_bracket.rs:2:26
  |
2 |     sscanf::scanf!("hi", "asdf}asdf");
  |                          ^^^^^^^^^^^
